--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,33 +3,52 @@
 @tailwind utilities;
 
 body {
-    height: 100vh;
-  }
-  .ql-editor {
-    font-size: 1.05rem;
-  }
+  height: 100vh;
+}
+.ql-editor {
+  font-size: 1.05rem;
+}
 
-  post-content p {
-    margin-bottom: 0.5rem;
+post-content p {
+  margin-bottom: 0.5rem;
+}
+.post-content h1 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  font-family: sans-serif;
+  margin: 1.5rem 0;
+}
+.post-content h2 {
+  font-size: 1.4rem;
+  font-family: sans-serif;
+  margin: 1.5rem 0;
+}
+.post-content a {
+  color: rgb(73, 149, 199);
+  text-decoration: none;
+}
+.post-content a:hover {
+  text-decoration: underline;
+}
+.dark .post-content a {
+  color: red;
+}
+
+@keyframes favorite {
+  0% {
+    transform: scale(1);
   }
-  .post-content h1 {
-    font-size: 1.5rem;
-    font-weight: 600;
-    font-family: sans-serif;
-    margin: 1.5rem 0;
+  25% {
+    transform: scale(1.2);
   }
-  .post-content h2 {
-    font-size: 1.4rem;
-    font-family: sans-serif;
-    margin: 1.5rem 0;
+  50% {
+    transform: scale(0.95);
   }
-  .post-content a {
-    color: rgb(73, 149, 199);
-    text-decoration: none;
+  100% {
+    transform: scale(1);
   }
-  .post-content a:hover {
-    text-decoration: underline;
-  }
-  .dark .post-content a {
-    color: red;
-  }
+}
+
+.animate-favorite {
+  animation: favorite 0.4s ease-in-out;
+}
