--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,3 +52,8 @@ post-content p {
 .animate-favorite {
   animation: favorite 0.4s ease-in-out;
 }
+
+.grecaptcha-badge {
+  visibility: visible !important;
+  opacity: 1 !important;
+}
